--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "redux": "^4.0.1",
     "reselect": "^4.0.0",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.84.0"
+    "semantic-ui-react": "^0.84.0",
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
