--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "reselect": "^4.0.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.84.0",
+    "serve": "^10.1.1",
     "uuid": "^3.3.2"
   },
   "scripts": {
